-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.7.0
-
3
-
14871
lustre/ldlm/ldlm_lib.c has this warning that needs to be fixed:
#if LUSTRE_VERSION_CODE < OBD_OCD_VERSION(2, 6, 51, 0)
/* 2.2.0 clients always swab nidtbl entries due to a bug, so server
* will do the swabbing for if the client is using the same endianness.
*
* This fixup is version-limited, because we don't want to carry the
* OBD_CONNECT_MNE_SWAB flag around forever, just so long as we need
* interop with unpatched 2.2 clients. For newer clients, servers
* will never do MNE swabbing, let the client handle that. LU-1644 */
export->exp_need_mne_swab = !ptlrpc_req_need_swab(req) &&
!(data->ocd_connect_flags & OBD_CONNECT_MNE_SWAB);
#else
#warning "LU-1644: Remove old OBD_CONNECT_MNE_SWAB fixup and exp_need_mne_swab"
#endif
- is related to
-
LU-1644 lustre b2_2<->master failure on lustre-initialization-1: ASSERTION( entry->mne_length <= ((1UL) << 12) )
-
- Resolved
-